@@ -1076,8 +1076,12 @@ public class Sense extends StdLibrary implements CMFlagLibrary
 				return true;
 			case Room.DOMAIN_OUTDOORS_SPACEPORT:
 				return true;
+			case Room.DOMAIN_OUTDOORS_UNDERWATER:
+				if((P.phyStats().weight()>2)&&(P.maxRange()>4))
+					return true;
+				return false;
 			case Room.DOMAIN_INDOORS_STONE:
-				if(P.phyStats().weight()>2)
+				if((P.phyStats().weight()>2)&&(P.maxRange()>4))
 					return true;
 				return false;
 			default:
